--- a/hemtt.toml
+++ b/hemtt.toml
@@ -34,6 +34,6 @@ headerexts = [
 
 [scripts.publish]
     steps_windows = [
-        "powershell ./tools/Publish.ps1 {{version}} YOUR_WORKSHOP_ID '@armaforces_medical'"
+        "powershell ./tools/Publish.ps1 {{version}} 1981535406 '@armaforces_medical'"
     ]
     show_output = true
