--- a/hemtt.toml
+++ b/hemtt.toml
@@ -1,5 +1,5 @@
-name = "ArmaForces Medical"
-prefix = "afmed"
+name = "DPSO Medical"
+prefix = "dpsomed"
 author = "ArmaForces"
 files = [
     "LICENSE",
@@ -9,31 +9,28 @@ files = [
 
 exclude = ["*.psd", "*.png", "*.tga"]
 
-modname = "armaforces_medical"
-keyname = "armaforces_medical_{{version}}"
-signame = "armaforces_medical_{{version}}"
+modname = "dpso_medical"
+keyname = "dpso_medical_{{version}}"
+signame = "dpso_medical_{{version}}"
 
 releasebuild = [
-    "!Set_version",
-    "@zip",
-    "!publish"
 ]
 
 # HEMTT >= 0.7 (unreleased)
 #[header_exts]
 #version = "{{git \"id 8\"}}"
-headerexts = [
-    "version={{git \"id 8\"}}"
-]
+# headerexts = [
+#     "version={{git \"id 8\"}}"
+# ]
 
-[scripts.Set_version]
-    steps_windows = [
-        "powershell ./tools/Set-Version.ps1 {{version}} '@armaforces_medical'"
-    ]
-    # show_output = true
+# [scripts.Set_version]
+#     steps_windows = [
+#         "powershell ./tools/Set-Version.ps1 {{version}} '@armaforces_medical'"
+#     ]
+#     # show_output = true
 
-[scripts.publish]
-    steps_windows = [
-        "powershell ./tools/Publish.ps1 {{version}} 1981535406 '@armaforces_medical'"
-    ]
-    show_output = true
+# [scripts.publish]
+#     steps_windows = [
+#         "powershell ./tools/Publish.ps1 {{version}} 1981535406 '@armaforces_medical'"
+#     ]
+#     show_output = true
